--- a/CustomerApp/app/src/main/res/layout/list_item.xml
+++ b/CustomerApp/app/src/main/res/layout/list_item.xml
@@ -3,11 +3,6 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -20,7 +15,7 @@
                 android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.5"/>
+                android:layout_weight="1.4"/>
 
             <TextView
                 android:id="@+id/listItemPrice"
@@ -31,13 +26,30 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="2"/>
 
+            <Button
+                android:focusable="false"
+                android:id="@+id/listItemDecrease"
+                android:layout_gravity="center_vertical"
+                android:backgroundTint="#a3aab1"
+                android:background="@drawable/minus"
+                android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
+                android:layout_width="26dp"
+                android:layout_height="26dp" />
+
+            <TextView
+                android:id="@+id/listItemQuantity"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:textSize="18dp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:text="0"
+                android:layout_weight="2.5"/>
+
 
 
         </LinearLayout>
-
-
-
-    </LinearLayout>
 
 
 </LinearLayout>
