--- a/EmployeeApp/app/src/main/res/layout/activity_handle_order.xml
+++ b/EmployeeApp/app/src/main/res/layout/activity_handle_order.xml
@@ -47,12 +47,11 @@
                 android:layout_weight="2"/>
 
         </LinearLayout>
+
         <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:id="@+id/listview_show_orders"
-            >
-        </ListView>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></ListView>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
