--- a/EmployeeApp/app/src/main/res/layout/stock_layout.xml
+++ b/EmployeeApp/app/src/main/res/layout/stock_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.periode4groep2.employeeapp.PresentationLayer.Stock">
+    tools:context="com.periode4groep2.employeeapp.PresentationLayer.StockActivity">
 
     <include
         android:id="@+id/tool_bar"
