--- a/EmployeeApp/app/src/main/res/layout/stock_layout.xml
+++ b/EmployeeApp/app/src/main/res/layout/stock_layout.xml
@@ -8,9 +8,10 @@
     tools:context="com.periode4groep2.employeeapp.PresentationLayer.StockActivity">
 
     <include
-        android:id="@+id/tool_bar"
-        layout="@layout/tool_bar">
+        android:id="@+id/tool_bar_no_button"
+        layout="@layout/tool_bar_no_button">
     </include>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
