--- a/EmployeeApp/app/src/main/res/values/colors.xml
+++ b/EmployeeApp/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="colorOrange">#FF9600</color>
     <color name="colorBackground">#001734</color>
 
+    <color name="colorOrderRed">#f94f0c</color>
+
 </resources>
