--- a/EmployeeApp/app/src/main/res/layout/activity_search_order.xml
+++ b/EmployeeApp/app/src/main/res/layout/activity_search_order.xml
@@ -15,6 +15,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
         android:orientation="horizontal"
         android:layout_gravity="center_vertical"
         android:layout_weight="1">
