--- a/EmployeeApp/app/src/main/res/layout/add_product_activity.xml
+++ b/EmployeeApp/app/src/main/res/layout/add_product_activity.xml
@@ -13,14 +13,20 @@
         android:orientation="horizontal"
         android:layout_weight="1">
 
-        <Button
+        <LinearLayout
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="top|left"
-            android:background="#ff9600"
-            android:text="Snacks"
-            android:margin="5dp">
-        </Button>
+            android:padding="5dp">
+
+            <Button
+                android:id="@+id/addExtraProductButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#ff9600"
+                android:text="Snacks"
+                android:textSize="18dp"/>
+        </LinearLayout>
 
     </LinearLayout>
 
