--- a/EmployeeApp/app/src/main/res/layout/activity_search_order.xml
+++ b/EmployeeApp/app/src/main/res/layout/activity_search_order.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     tools:context="com.periode4groep2.employeeapp.PresentationLayer.SearchOrderActivity">
 
     <include
