--- a/EmployeeApp/app/src/main/res/layout/add_products_activity.xml
+++ b/EmployeeApp/app/src/main/res/layout/add_products_activity.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="com.periode4groep2.employeeapp.PresentationLayer.AddExtraProducts">
 
     <include
         android:id="@+id/tool_bar_no_button"
@@ -31,3 +35,6 @@
     </LinearLayout>
 
 </LinearLayout>
+
+
+
