--- a/EmployeeApp/app/src/main/res/layout/list_item.xml
+++ b/EmployeeApp/app/src/main/res/layout/list_item.xml
@@ -6,6 +6,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:background="@color/colorBackground"
             android:orientation="horizontal">
 
             <TextView
