--- a/EmployeeApp/app/src/main/res/layout/add_products_activity.xml
+++ b/EmployeeApp/app/src/main/res/layout/add_products_activity.xml
@@ -11,29 +11,18 @@
         android:id="@+id/tool_bar_no_button"
         layout="@layout/tool_bar_no_button"></include>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
+        android:id="@+id/layout_buttonspawner"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:layout_weight="1">
-
-        <LinearLayout
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_gravity="top|left"
-            android:padding="4dp">
-
-            <Button
-                android:id="@+id/addExtraProductButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#ff9600"
-                android:text="Snacks"
-                android:textSize="18dp"/>
         </LinearLayout>
-
-    </LinearLayout>
-
+    </ScrollView>
 </LinearLayout>
 
 
