--- a/CustomerApp/app/src/main/res/layout/activity_handled_order_history_detail.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_handled_order_history_detail.xml
@@ -99,11 +99,18 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
+                android:layout_weight="2"
                 android:text="@string/quantity_textview"
                 android:textStyle="bold"
                 android:textSize="16sp" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="Prijs"
+                android:textStyle="bold"
+                android:textSize="16sp" />
         </LinearLayout>
 
         <ListView
