--- a/CustomerApp/app/src/main/res/layout/activity_settings.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_settings.xml
@@ -125,13 +125,15 @@
             android:paddingLeft="10dp"
             android:textStyle="bold" />
         <Spinner
+            android:id="@+id/language_spinner"
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:entries="@array/language_array_spinner_entries"
-            >
+            android:entries="@array/language_array_spinner_entries">
         </Spinner>
+
         </LinearLayout>
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -145,7 +147,7 @@
             android:layout_height="match_parent"
             android:id="@+id/saveSettingsID"
             android:backgroundTint="@color/colorOrange"
-            android:text="@string/save_settings_button"
+            android:text="@string/menu_button"
             android:layout_weight="1"
             android:textSize="14sp"/>
     </LinearLayout>
