--- a/CustomerApp/app/src/main/res/layout/activity_unhandled_order_history_detail.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_unhandled_order_history_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,7 +10,7 @@
     <include
         android:id="@+id/tool_bar"
         layout="@layout/tool_bar"
-        ></include>
+    />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,7 +33,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/orderTimeText"
+                android:id="@+id/orderTimeHeader"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
@@ -44,41 +43,15 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/orderTime"
+                android:id="@+id/orderTimeText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
+                android:layout_marginLeft="15dp"
                 android:text="@string/unhandled_order_time_display"
                 android:textSize="16sp"
                 android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/orderHandledText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:text="@string/unhandled_order_paystatus_header"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/orderHandled"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:layout_marginRight="10dp"
-                android:text="@string/"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-
+            
         </LinearLayout>
 
         <LinearLayout
@@ -108,7 +81,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Prijs:"
+                android:text="@string/unhandled_order_price"
                 android:textStyle="bold"
                 android:textSize="16sp" />
 
@@ -130,7 +103,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/totalPriceText"
-            android:text="Totaal:"
+            android:text="@string/unhandled_order_total"
             android:textColor="@color/colorOrange"
             android:textSize="16dp"
                 android:textStyle="bold"
@@ -158,7 +131,7 @@
             android:layout_marginRight="15dp"
             android:layout_marginTop="15dp"
             android:background="@color/colorOrange"
-            android:text="Nu betalen"
+            android:text="@string/unhandled_order_button"
             android:textSize="18dp" />
 
     </LinearLayout>
