--- a/EmployeeApp/app/src/main/res/layout/tool_bar_no_button.xml
+++ b/EmployeeApp/app/src/main/res/layout/tool_bar_no_button.xml
@@ -7,6 +7,9 @@
     android:layout_height="56dp"
     android:background="#FF9600"
     android:elevation="4dp"
+    app:contentInsetLeft="-5dp"
+    android:contentInsetStart="-5dp"
+    app:contentInsetStartWithNavigation="-5dp"
     android:theme="@style/BestelAppv2"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
     
