--- a/EmployeeApp/app/src/main/res/layout/add_products_activity.xml
+++ b/EmployeeApp/app/src/main/res/layout/add_products_activity.xml
@@ -11,13 +11,14 @@
     <include
         android:id="@+id/tool_bar_no_button"
         layout="@layout/tool_bar_no_button"></include>
-
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:layout_weight="100"
+        >
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:orientation="vertical"
             >
     <LinearLayout
@@ -96,16 +97,24 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_weight="1">
+
                 <TextView
+                    android:id="@+id/textView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Snacks:"
-                    android:textSize="20dp"
                     android:textAlignment="center"
-                    />
+                    android:textSize="20dp" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        >
     <Button
         android:id="@+id/backButton"
         android:layout_width="match_parent"
@@ -117,6 +126,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
         />
+    </LinearLayout>
 </LinearLayout>
 
 
