--- a/EmployeeApp/app/src/main/res/values/colors.xml
+++ b/EmployeeApp/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorDarkRed">#700a0a</color>
+    <color name="colorBlack">#000000</color>
 
     <color name="NavigationBarDark">#1c1c1c</color>
 
