--- a/EmployeeApp/app/src/main/res/layout/activity_add_stock_product.xml
+++ b/EmployeeApp/app/src/main/res/layout/activity_add_stock_product.xml
@@ -27,49 +27,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/add_stock_productId_label"
-                android:paddingLeft="20dp"
-                android:textSize="20dp"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_weight="1">
-
-            <EditText
-                android:id="@+id/stock_add_product_productID"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorBlack"
-                android:textColorHint="@android:color/darker_gray"
-                android:textSize="20dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:background="@color/colorWhite"
-                android:hint="@string/add_stock_productId_hint"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_weight="1">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text="@string/add_stock_category_label"
                 android:paddingLeft="20dp"
                 android:textSize="20dp"/>
@@ -89,6 +46,7 @@
                 android:textColor="@color/colorBlack"
                 android:textColorHint="@android:color/darker_gray"
                 android:textSize="20dp"
+                android:maxLines="1"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:background="@color/colorWhite"
@@ -132,53 +90,11 @@
                 android:textColor="@color/colorBlack"
                 android:textColorHint="@android:color/darker_gray"
                 android:textSize="20dp"
+                android:maxLines="1"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:background="@color/colorWhite"
                 android:hint="@string/add_stock_name_hint"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_weight="1">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/add_stock_instock_label"
-                android:paddingLeft="20dp"
-                android:textSize="20dp"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_weight="1">
-
-            <EditText
-                android:id="@+id/stock_add_product_instock"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorBlack"
-                android:textColorHint="@android:color/darker_gray"
-                android:textSize="20dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:background="@color/colorWhite"
-                android:hint="@string/add_stock_instock_hint"/>
 
         </LinearLayout>
 
@@ -215,9 +131,11 @@
                 android:id="@+id/stock_add_product_price"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
+                android:maxLines="1"
                 android:textColor="@color/colorBlack"
                 android:textColorHint="@android:color/darker_gray"
                 android:textSize="20dp"
+                android:inputType="numberDecimal"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:background="@color/colorWhite"
@@ -261,6 +179,7 @@
                 android:textColor="@color/colorBlack"
                 android:textColorHint="@android:color/darker_gray"
                 android:textSize="20dp"
+                android:maxLines="1"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:background="@color/colorWhite"
@@ -300,6 +219,7 @@
             <EditText
                 android:id="@+id/stock_add_product_categoryEng"
                 android:layout_width="150dp"
+                android:maxLines="1"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorBlack"
                 android:textColorHint="@android:color/darker_gray"
