--- a/CustomerApp/app/src/main/res/layout/activity_unhandled_order_history_detail.xml
+++ b/CustomerApp/app/src/main/res/layout/activity_unhandled_order_history_detail.xml
@@ -43,11 +43,10 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/orderTimeText"
+                android:id="@+id/orderTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:layout_marginLeft="15dp"
                 android:text="@string/unhandled_order_time_display"
                 android:textSize="16sp"
                 android:textStyle="bold" />
