--- a/EmployeeApp/app/src/main/res/layout/activity_search_order.xml
+++ b/EmployeeApp/app/src/main/res/layout/activity_search_order.xml
@@ -27,6 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:maxLines="1"
             android:backgroundTint="@color/colorOrange"
             android:hint="@string/search_order_edit_text_hint"
             />
