--- a/EmployeeApp/app/src/main/res/layout/activity_home_screen.xml
+++ b/EmployeeApp/app/src/main/res/layout/activity_home_screen.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/ic_scanner"
             />
 
         <TextView
@@ -55,7 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/ic_search"
             android:background="@color/colorBackground"
             />
         <TextView
@@ -83,7 +83,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/ic_edit"
             android:background="@color/colorBackground"
             />
         <TextView
