--- a/EmployeeApp/app/src/main/res/layout/activity_home_screen.xml
+++ b/EmployeeApp/app/src/main/res/layout/activity_home_screen.xml
@@ -27,6 +27,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:src="@drawable/ic_scanner"
+            android:paddingTop="10dp"
             />
 
         <TextView
@@ -55,6 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:paddingTop="10dp"
             android:src="@drawable/ic_search"
             android:background="@color/colorBackground"
             />
@@ -83,6 +85,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:paddingTop="10dp"
             android:src="@drawable/ic_edit"
             android:background="@color/colorBackground"
             />
